<resources>
    <string name="app_name">Flash浏览器</string>
    <string name="url_hint">输入网址或搜索词</string>
    <string name="go">打开</string>
    <string name="back">后退</string>
    <string name="forward">前进</string>
    <string name="refresh">刷新</string>
    <string name="settings">设置</string>
    <string name="orientation_settings">屏幕方向设置</string>
    <string name="orientation_landscape">默认横屏</string>
    <string name="orientation_portrait">默认竖屏</string>
    <string name="orientation_system">跟随系统</string>
    <string name="mapping_config_path">显示映射配置路径</string>
    <string name="cookie_profiles">Cookie 配置</string>
    <string name="cookie_profile_title">选择 Cookie 配置</string>
    <string name="cookie_file_name">文件名：%1$s</string>
    <string name="cookie_user_name">用户：%1$s</string>
    <string name="cookie_apply">应用</string>
    <string name="cookie_edit">修改</string>
    <string name="cookie_delete">删除 Cookie</string>
    <string name="cookie_cleanup_duplicates">清理多余 Cookie</string>
    <string name="cookie_cleanup_all_duplicates">清理所有多余 Cookie</string>
    <string name="cookie_edit_title">修改 Cookie 信息</string>
    <string name="cookie_edit_file_name">Cookie 文件名</string>
    <string name="cookie_edit_file_name_hint">留空则使用默认文件名</string>
    <string name="cookie_edit_user_name">UserName</string>
    <string name="cookie_edit_user_name_hint">留空则使用默认用户名</string>
    <string name="cookie_edit_saved">Cookie 信息已更新</string>
    <string name="cookie_edit_failed">更新 Cookie 信息失败</string>
    <string name="cookie_no_profiles">没有可用的 Cookie XML 配置</string>
    <string name="cookie_storage_permission_needed">需要存储权限才能访问 PVZOLcookies 文件夹</string>
    <string name="cookie_storage_permission_granted_tip">请在系统页面授予“所有文件访问权限”</string>
    <string name="cookie_copy_failed">初始化 Cookie 配置失败</string>
    <string name="cookie_applied">Cookie 已应用</string>
    <string name="cookie_delete_title">删除 Cookie</string>
    <string name="cookie_delete_message">这会删除当前所有相同内容的 Cookie 文件。请输入“我已知晓”后确认删除。</string>
    <string name="cookie_delete_confirm_hint">请输入：我已知晓</string>
    <string name="cookie_deleted">Cookie 已删除</string>
    <string name="cookie_delete_failed">删除 Cookie 失败</string>
    <string name="cookie_cleanup_done">已清理多余 Cookie</string>
    <string name="cookie_cleanup_none">当前没有可清理的多余 Cookie</string>
    <string name="cookie_cleanup_all_done">已清理全部多余 Cookie</string>
    <string name="cookie_import_success_single">已导入 Cookie：%1$s</string>
    <string name="cookie_import_success_multiple">已导入 %1$d 个 Cookie 文件</string>
    <string name="cookie_import_failed">导入 Cookie 失败</string>
    <string name="cookie_import_need_permission">需要存储权限才能导入 Cookie 文件</string>
    <string name="clipboard_cookie_detected_title">检测到剪切板 Cookie</string>
    <string name="clipboard_cookie_detected_message">检测到剪切板中存在符合规则的 Cookie 配置文本，是否保存到本地？</string>
    <string name="clipboard_cookie_detected_message_select_server">检测到剪切板中存在符合规则的最小 Cookie 文本。保存前请选择对应区服。</string>
    <string name="clipboard_cookie_confirm_save">保存</string>
    <string name="clipboard_cookie_saved">Cookie 已保存：%1$s</string>
    <string name="clipboard_cookie_save_failed">保存剪切板 Cookie 失败</string>
    <string name="clipboard_cookie_access_denied">当前还不能读取剪切板，稍后会再次检测</string>
    <string name="clipboard_cookie_server_label">选择或输入区服</string>
    <string name="clipboard_cookie_server_hint">输入 1-46 区</string>
    <string name="clipboard_cookie_server_select">下拉选择区服</string>
    <string name="clipboard_cookie_server_invalid">请输入 1-46 之间的区服</string>
    <string name="welcome_dialog_title">欢迎使用 Flash浏览器</string>
    <string name="welcome_dialog_message">欢迎加入交流群，反馈问题、获取最新版本、与其他玩家交流！</string>
    <string name="welcome_dialog_hint">点击“加入交流群”将打开加群链接，需要手机已安装 QQ 客户端。</string>
    <string name="welcome_dialog_dont_show_again">不再显示</string>
    <string name="welcome_dialog_join">加入交流群</string>
    <string name="welcome_dialog_cancel">取消</string>
    <string name="group_join_url">https://jq.qq.com/?_wv=1027&amp;k=3gAXiCUm</string>
    <string name="welcome_show_group_dialog">加入交流群</string>
</resources>
